--- a/service-component/nginx/pom.xml
+++ b/service-component/nginx/pom.xml
@@ -3,22 +3,14 @@
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
-    <artifactId>careerism-parent</artifactId>
+    <artifactId>service-component</artifactId>
     <groupId>pers.mihao.careerism</groupId>
     <version>1.0-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
-  <artifactId>service-component</artifactId>
-  <packaging>pom</packaging>
-  <modules>
-    <module>mysql</module>
-    <module>zookeeper</module>
-    <module>redis</module>
-    <module>es</module>
-    <module>mq</module>
-    <module>nginx</module>
-  </modules>
+  <groupId>pers.mihao.careerism</groupId>
+  <artifactId>nginx</artifactId>
 
 
 </project>
