--- a/service-component/mq/pom.xml
+++ b/service-component/mq/pom.xml
@@ -9,8 +9,14 @@
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>pers.mihao.careerism</groupId>
   <artifactId>mq</artifactId>
+
+  <dependencies>
+    <dependency>
+      <groupId>com.rabbitmq</groupId>
+      <artifactId>amqp-client</artifactId>
+    </dependency>
+  </dependencies>
 
 
 </project>
