--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,11 @@
         <artifactId>fastjson</artifactId>
         <version>1.2.73</version>
       </dependency>
+      <dependency>
+        <groupId>com.rabbitmq</groupId>
+        <artifactId>amqp-client</artifactId>
+        <version>5.4.3</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
